# NoxQR

./: .gitignore  CHANGELOG.md  README.md  docker-compose.yml  package.json
.github/workflows/: regression.yml
backend/: Cargo.toml  Dockerfile
backend/src/: error.rs  main.rs
backend/src/api/: handlers.rs
backend/src/core/: encoding.rs  matrix.rs  mod.rs
backend/src/engine/: pipeline.rs
backend/src/models/: request.rs  response.rs
backend/src/render/: artistic.rs  design.rs  mod.rs  renderer.rs
backend/src/render/styles/: blobs.rs  dots.rs  fractal.rs  glyphs.rs  hexagons.rs  lines.rs  mod.rs  square.rs  triangles.rs
backend/src/routes/: generate.rs
backend/src/services/: mod.rs  qr_engine.rs  renderer.rs
backend/src/services/styles/: dots.rs  lines.rs  mod.rs  square.rs
backend/src/validation/: mod.rs  reliability.rs
docs/: engine-overview.md  testing.md
frontend/: .env.example  Dockerfile  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ControlsPanel.tsx  FloatingHeaderLeft.tsx  FloatingHeaderRight.tsx  HeaderControls.tsx  HeroHeader.tsx  QRPreview.tsx  SiteFooter.tsx  StudioControlsPanel.tsx
frontend/lib/: runtimeMessages.ts
frontend/lib/api/: qrClient.ts
frontend/lib/studio/: contentModel.ts  designModel.ts  logoPresets.ts
frontend/store/: useQRStore.ts
scripts/: run-backend-unit-tests.sh  run-frontend-typecheck.sh  run-regression-tests.sh  run-test-battery.sh
tests/e2e/: regression.spec.mjs
