[package]
name = "noxqr-backend"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
axum = "0.7"
base64 = "0.22"
image = "0.25"
qrcode = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
